oauth with google init

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/JustPark
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+#Goggle oauth
+spring.security.oauth2.client.registration.google.client-id=883921123010-9rv6qnnad0hso9epusejbomdk0m6ugib.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
