--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/JustPark
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 #Goggle oauth
 spring.security.oauth2.client.registration.google.client-id=883921123010-9rv6qnnad0hso9epusejbomdk0m6ugib.apps.googleusercontent.com
