--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.210</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
