--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/JustPark
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-#jwt.expiration=50000
-#jwt.secret=vcozinvp9iqgnva;OWBHN2]0]n]2i04tgOVWDrhgjsdlfzknvq[3-9e[8y5n0`t54gq0u39reisdV/arhA?///%^&*0q395i()O*$TIG"VGRST{#T(
-
-#Goggle oauth
-spring.security.oauth2.client.registration.google.client-id=883921123010-9rv6qnnad0hso9epusejbomdk0m6ugib.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+#spring.jpa.hibernate.ddl-auto=update
