--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '21'
-          distribution: 'amazon'
+          distribution: 'corretto'
 
       - name: Build with Maven
         run: mvn clean package -DskipTests
