--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,3 +27,26 @@ jobs:
 
       - name: Run unit tests
         run: mvn test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v2
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
+
+      - name: Build Docker image and Push to Registry
+        run: |
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/my-spring-app:latest .
+          docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/my-spring-app:latest
